--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3500,10 +3500,16 @@ SECCION AUTORES
 .contador-cuerpo{
     margin: 0px;
 }
-.contador-numero{}
+.contador-numero{
+    width:70%;
+    text-align: center;
+    float: left;
+}
 .contador-rango{
     color: #fff !important;
     font-size: 23px;
+    width:30%;
+    float: left;
 }
 .contador-cuerpo-inside{
     padding:2%;
