--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3504,13 +3504,19 @@ SECCION AUTORES
     width: 60%;
     text-align: center;
     float: left;
-    font-size: 45px;
+    font-size: 44px;
     color: #fff;
     font-family: 'Bree Serif', serif;
 }
 .number{
-    background-color:#c4afa1;
-    border-radius: 3%;
+    background-color: #c4afa1;
+    border-radius: 21%;
+    width: 44%;
+    float: left;
+    margin: 2%;
+    -webkit-box-shadow: 9px 4px 32px -8px rgba(0,0,0,0.66);
+    -moz-box-shadow: 9px 4px 32px -8px rgba(0,0,0,0.66);
+    box-shadow: 9px 4px 32px -8px rgba(0,0,0,0.86);
 }
 
 .contador-rango{
