--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3495,8 +3495,8 @@ SECCION AUTORES
     padding-top: 1%;
     padding-bottom: 6%;
 }
-.contador-header h3{font-size: 26px;text-align: center;margin-bottom: 0px;}
-.contador-header-subtitulo{font-size: 23px;text-align: left;margin-left: 10%;}
+.contador-header h3{font-size: 26px;text-align: center;margin-bottom: 0px;font-family: 'Bree Serif', serif;}
+.contador-header-subtitulo{font-size: 23px;text-align: left;margin-left: 10%;font-family: 'Bree Serif', serif;}
 .contador-cuerpo{
     margin: 0px;
 }
