--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3569,7 +3569,7 @@ SECCION AUTORES
     font-weight: 500;
     font-family: lato;
     margin-top: 1%;
-    margin-bottom: 1%;
+    margin-bottom: 3%;
     width: 49%;
     float: left;
 }
@@ -3581,13 +3581,29 @@ SECCION AUTORES
     font-weight: 500;
     font-family: lato;
     margin-top: 1%;
-    margin-bottom: 1%;
+    margin-bottom: 3%;
     width: 49%;
     float: left;
     text-align: right;
 }
 .footer-iconos a{
     margin: 0% 1% 0% 1%;
+}
+
+.footer-iconos a:hover {
+    color: #9d8575;
+}
+
+.fl-horizon,.fl-vertical{
+display:none;
+}
+
+.hrvertical{
+    border: none;
+    border-left: 1px solid hsla(200, 10%, 50%,100);
+    height: 100vh;
+    width: 1px;
+    color:#fff;
 }
 
 
