--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3603,6 +3603,7 @@ display:none;
     border-left: 1px solid hsla(200, 10%, 50%,100);
     height: 100vh;
     width: 1px;
+    height: 20px;
     color:#fff;
 }
 
