--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3594,6 +3594,10 @@ SECCION AUTORES
     color: #9d8575;
 }
 
+.footer-iconos a:visited {
+    color: #fff !important;
+}
+
 .fl-horizon,.fl-vertical{
 display:none;
 }
@@ -3605,9 +3609,6 @@ display:none;
     width: 1px;
     height: 20px;
     color:#fff;
-}
-a:visited {
-    color: #ffffff;
 }
 
 
