--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2959,6 +2959,7 @@ article .post-content .has-content-area {
     grid-gap: 20px;
     margin-bottom: 20px;
     font-family: "Bree Serif";
+    margin-left: 12%;
 }
 
 .search-post .imagen {
