--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1182,6 +1182,17 @@ ul.tagposts-list li {
 .inner.container .col-3{
     grid-template-columns: repeat(3, minmax(260px, 1fr));
 }
+@media (max-width: 900px){
+    .inner.container .col-3{
+    grid-template-columns: repeat(2, minmax(260px, 1fr));
+}
+}
+@media (max-width: 580px){
+    .inner.container .col-3{
+    grid-template-columns: repeat(1, minmax(260px, 1fr));
+}
+}
+
 
 
 /* ADS inside render-posts*/
