--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3645,6 +3645,6 @@ display:none;
 
 /*Page Blank*/
 
-.page-template-page-blank .masthead{
+.page-template-page-blank #masthead{
     display: none;
 }
