--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3648,3 +3648,7 @@ display:none;
 .page-template-page-blank #masthead{
     display: none;
 }
+
+.page-template-page-blank .entry-content{
+    font-family: "Lato";
+}
