--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3650,5 +3650,5 @@ display:none;
 }
 
 .page-template-page-blank .entry-content{
-    font-family: "Lato";
+    font-family: "Lato" !important;
 }
