--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3654,5 +3654,5 @@ display:none;
 }
 
 .page-template-page-blank .highlight-and-share-wrapper{
-    display: none;
+    display: none !important;
 }
