--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1267,14 +1267,9 @@ ul.tagposts-list li {
 }
 
 @media (max-width: 950px){
-    /*.col-2-2 {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 30px;
-        padding-left: 10px;
-        margin-bottom: 50px;
-        margin-top: 50px;
-    }*/
+    .col-2-2 {
+        padding-left: 0px;
+    }
 }
 
 .advertical {
