--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3210,6 +3210,13 @@ article .post-content .has-content-area {
     margin: 0px;
 }
 
+@media (max-width: 500px){
+    .encuesta-section .titulo h3{
+        font-size: 30px;
+        margin-bottom: 20px;
+    }
+}
+
 .encuesta-section .titulo p {
     margin: 0px;
 }
