--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -479,6 +479,7 @@ input:-internal-autofill-selected {
 @media (max-width: 980px){
     .inner.container .content {
         width: 100%;
+        border-top: 0px !important;
     }
 }
 
