--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -480,6 +480,7 @@ input:-internal-autofill-selected {
     .inner.container .content {
         width: 100%;
         border-top: 0px !important;
+        margin-top: 40px;
     }
 }
 
