--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -92,6 +92,12 @@ h2:before {
     background: #b29f93;
 }
 
+@media (max-width: 1100px){
+    .top-bar{
+        padding: 5px 20px;
+    }
+}
+
 .top-bar .container {
     display: flex;
     justify-content: space-between;
