--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -104,7 +104,7 @@ h2:before {
     align-items: center;
 }
 
-@media (max-width: 980){
+@media (max-width: 980px){
     .top-bar .container .logo{
         display: none;
     }
