--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -102,6 +102,7 @@ h2:before {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 @media (max-width: 980px){
@@ -120,6 +121,12 @@ h2:before {
     .top-bar .container .mobile-logo{
         display: none;
     }
+}
+
+.mobile-logo{
+    position: absolute;
+    left: 20px;
+    bottom: -50px;
 }
 
 .logo img {
