--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -287,7 +287,7 @@ h2:before {
     position: relative;
 }
 
-@media (max-width){
+@media (max-width: 960px){
     .search .search-form{
         justify-content: flex-end;
         margin-right: 20px;
