--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3850,14 +3850,15 @@ div.wpcf7-mail-sent-ok{
 
 .hamburger-box {
   width: 40px;
-  height: 16px;
+  height: 14px;
   display: inline-block;
   position: relative; }
 
 .hamburger-inner {
   display: block;
   top: 50%;
-  margin-top: -2px; }
+  margin-top: -2px;
+    width: 25px !important; }
   .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
     width: 30px;
     height: 2px;
