--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3855,11 +3855,11 @@ div.wpcf7-mail-sent-ok{
   position: relative; }
 
 .hamburger-inner {
-  display: block;
-  top: 50%;
-  margin-top: -2px;
-    width: 25px !important; }
-  .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+    display: block;
+    top: 50%;
+    margin-top: -2px;
+ }
+.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
     width: 30px;
     height: 2px;
     background-color: #fff;
@@ -3867,14 +3867,20 @@ div.wpcf7-mail-sent-ok{
     position: absolute;
     transition-property: transform;
     transition-duration: 0.15s;
-    transition-timing-function: ease; }
-  .hamburger-inner::before, .hamburger-inner::after {
+    transition-timing-function: ease; 
+}
+
+.hamburger-inner::before, .hamburger-inner::after {
     content: "";
-    display: block; }
-  .hamburger-inner::before {
-    top: -9px; }
-  .hamburger-inner::after {
-    bottom: -9px; }
+    display: block;
+}
+.hamburger-inner::before {
+    width: 25px !important;
+    top: -9px; 
+}
+.hamburger-inner::after {
+    bottom: -9px; 
+}
 
     /*
    * Slider
