--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3846,11 +3846,11 @@ div.wpcf7-mail-sent-ok{
   .hamburger.is-active .hamburger-inner,
   .hamburger.is-active .hamburger-inner::before,
   .hamburger.is-active .hamburger-inner::after {
-    background-color: #000; }
+    background-color: #fff; }
 
 .hamburger-box {
   width: 40px;
-  height: 14px;
+  height: 18px;
   display: inline-block;
   position: relative; }
 
