--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -155,6 +155,20 @@ h2:before {
     }
 }
 
+.mobile-menu{
+    position: fixed;
+    right: 0;
+    height: 100vh;
+    width: 40vw;
+    background: #f2f2f2;
+}
+
+@media (min-width: 980px){
+    .mobile-menu{
+        display: none;
+    }
+}
+
 
 .logo img {
     height: 15px;
