--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -168,6 +168,10 @@ h2:before {
     background: #f2f2f2;
     top: 0;
     z-index: 999999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 @media (min-width: 980px){
@@ -177,7 +181,7 @@ h2:before {
 }
 
 .menu-logo img{
-    fill: #e7d117;
+    width: 100%;
 }
 
 .lock-scroll {
