--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3870,15 +3870,13 @@ div.wpcf7-mail-sent-ok{
   background: transparent !important;
   border: 0;
   margin: 0;
-  overflow: visible; }
-  .hamburger:hover {
-    opacity: 0.7; }
-  .hamburger.is-active:hover {
-    opacity: 0.7; }
+  overflow: visible; 
+}
+
   .hamburger.is-active .hamburger-inner,
   .hamburger.is-active .hamburger-inner::before,
   .hamburger.is-active .hamburger-inner::after {
-    background-color: #fff; }
+    background-color: #e7d117; }
 
 .hamburger-box {
   width: 40px;
@@ -3942,5 +3940,5 @@ div.wpcf7-mail-sent-ok{
 }
 
 .hamburger--slider.is-active .hamburger-inner::after {
-    transform: translate3d(0, -20px, 0) rotate(-90deg); 
+    transform: translate3d(0, -17px, 0) rotate(-90deg); 
 }
