--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -165,6 +165,7 @@ h2:before {
     right: 0;
     height: 100vh;
     width: 0;
+    overflow: hidden;
     background: #f2f2f2;
     top: 0;
     z-index: 999999;
