--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -164,7 +164,7 @@ h2:before {
     position: fixed;
     right: 0;
     height: 100vh;
-    width: 0;
+    width: 0px;
     overflow: hidden;
     background: #f2f2f2;
     top: 0;
