--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -164,7 +164,7 @@ h2:before {
     position: fixed;
     right: 0;
     height: 100vh;
-    width: 0px;
+    width: 40vw;
     overflow: hidden;
     background: #f2f2f2;
     top: 0;
@@ -174,6 +174,8 @@ h2:before {
     flex-direction: column;
     border-left: 4px solid #e7d117;
     padding: 38px 20px;
+    transform: translateX(50vw);
+    transform: 300ms ease;
 }
 
 @media (min-width: 980px){
@@ -183,7 +185,7 @@ h2:before {
 }
 
 .mobile-menu.open{
-    width: 50vw;
+    transform: translateX(0);
 }
 
 .mobile-menu-header{
