--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -175,7 +175,7 @@ h2:before {
     border-left: 4px solid #e7d117;
     padding: 38px 20px;
     transform: translateX(50vw);
-    transform: 300ms ease;
+    transition: 300ms ease;
 }
 
 @media (min-width: 980px){
