--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -185,6 +185,13 @@ h2:before {
     }
 }
 
+@media (max-width: 550px){
+    .mobile-menu{
+        width: 80vw;
+        transform: translateX(80vw);
+    }
+}
+
 @media (min-width: 980px){
     .mobile-menu{
         display: none;
