--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -192,6 +192,13 @@ h2:before {
     }
 }
 
+@media (max-width: 400px){
+    .mobile-menu{
+        width: 90vw;
+        transform: translateX(90vw);
+    }
+}
+
 @media (min-width: 980px){
     .mobile-menu{
         display: none;
