--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -336,6 +336,12 @@ h2:before {
 
 }
 
+@media (max-width: 600px){
+    .search input[type="search"]{
+        width: 170px;
+    }
+}
+
 .search input[type="search"]:focus,
 .search input[type="search"]:active {
     border-color: transparent !important;
@@ -347,6 +353,11 @@ h2:before {
     font-size: 17px;
     color: #fff;
     font-family: 'Bree Serif', serif;
+}
+@media (max-width: 600px){
+    .search input[type="search"]::placeholder{
+        font-size: 14px;
+    }
 }
 
 .search .search-form label {
