--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -342,11 +342,6 @@ h2:before {
         padding-left: 0px;
         border: 0;
     }
-    .search .search-form label:after{
-        width: 25px;
-        height: 25px;
-        font-size: 16px;
-    }
 }
 
 .search input[type="search"]:focus,
@@ -387,6 +382,14 @@ h2:before {
     justify-content: center;
     align-items: center;
     margin-right: 10px;
+}
+
+@media (max-width: 600px){
+    .search .search-form label:after{
+        width: 25px;
+        height: 25px;
+        font-size: 16px;
+    }
 }
 
 .search .search-form input[type="submit"] {
