--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -126,7 +126,7 @@ h2:before {
 .mobile-logo{
     position: absolute;
     left: 0px;
-    bottom: -109px;
+    bottom: -89px;
 }
 
 .mobile-logo .stories{
@@ -341,6 +341,8 @@ h2:before {
         width: 170px;
         padding-left: 0px;
         border: 0;
+        padding: 5px 0;
+        height: 31px;
     }
 }
 
