--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3947,7 +3947,7 @@ div.wpcf7-mail-sent-ok{
 /*HAMBURGUER*/
 
 .hamburger {
-  padding: 0px 15px;
+  padding: 0px 0px 0px 10px;
   display: inline-block;
   cursor: pointer;
   transition-property: opacity, filter;
