--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1796,11 +1796,11 @@ ul.tagposts-list li {
     color: #c4afa1;
     transform: rotate(270deg);
     position: absolute;
-    bottom: 40%;
+    bottom: 48%;
     font-size: 16px;
     height: 40px;
-    width: 100%;
-    left: -45%;
+    width: 320px;
+    left: -143px;
 }
 
 .hovered .post-category a {
