--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2854,9 +2854,9 @@ article .post-content .has-content-area {
     background: #f5f8fa;
 }
 
-@media (min-width: 980px){
+@media (max-width: 980px){
     .comments-area {
-        max-width: calc(8 * (100vw / 12) - 28px);
+        max-width: 100%;
     }
 }
 
