--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2851,12 +2851,15 @@ article .post-content .has-content-area {
     border-bottom: 7px solid #ccc;
     margin: 0px;
     margin-left: 50px !important;
+    margin-right: 50px !important;
     background: #f5f8fa;
 }
 
 @media (min-width: 980px){
     .comments-area {
         margin: 0px !important;
+        /* width: 100%; */
+        max-width: 100%;
     }
 }
 
