--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2906,8 +2906,8 @@ article .post-content .has-content-area {
     border-top: 7px solid #ccc;
     border-bottom: 7px solid #ccc;
     margin: 0px;
-    margin-left: 50px !important;
-    margin-right: 50px !important;
+    margin-left: 50px ;
+    margin-right: 50px ;
     background: #f5f8fa;
 }
 
