--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2868,7 +2868,7 @@ article .post-content .has-content-area {
     position: relative;
 }
 
-@media (max-width: 768){
+@media (max-width: 768px){
     .related-title{
         width: 100%;
         text-align: center;
