--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4226,3 +4226,11 @@ AUTHOR PAGE
     right: 20px;
     z-index: 2;
 }
+
+.author-header h1::before{
+    content: '';
+    width: 20px;
+    height: 1px;
+    background-color: #b29f93;
+    
+}
