--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4227,7 +4227,7 @@ AUTHOR PAGE
     z-index: 2;
 }
 
-.author-header h1::before{
+.author-header .author-name::before{
     content: '';
     width: 20px;
     height: 1px;
